Figure - Added Id

--- a/RayTracingApp/DataBaseRepository/DataBaseRepository.csproj
+++ b/RayTracingApp/DataBaseRepository/DataBaseRepository.csproj
@@ -52,11 +52,27 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context.cs" />
+    <Compile Include="Exceptions\NotFoundClientException.cs" />
+    <Compile Include="Exceptions\NotFoundFigureException.cs" />
+    <Compile Include="Exceptions\NotFoundMaterialException.cs" />
+    <Compile Include="Exceptions\NotFoundModelException.cs" />
+    <Compile Include="Exceptions\NotFoundSceneException.cs" />
+    <Compile Include="FigureRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj">
+      <Project>{26FD191F-901D-4224-A0F4-C93819EDA0DE}</Project>
+      <Name>Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IRepository\IRepository.csproj">
+      <Project>{D74D687A-51AA-4F86-9A2E-BDC3BF517078}</Project>
+      <Name>IRepository</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
