--- a/RayTracingApp/GUI/GUI.csproj
+++ b/RayTracingApp/GUI/GUI.csproj
@@ -110,6 +110,18 @@
     <Compile Include="Home\Scene\AddScene\UsedModelItem.Designer.cs">
       <DependentUpon>UsedModelItem.cs</DependentUpon>
     </Compile>
+    <Compile Include="Logs\Logs.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Logs\Logs.Designer.cs">
+      <DependentUpon>Logs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Logs\LogsItem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Logs\LogsItem.Designer.cs">
+      <DependentUpon>LogsItem.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utils\SceneUtils.cs" />
     <Compile Include="Utils\StringUtils.cs" />
     <Compile Include="Utils\InputUtils.cs" />
@@ -270,6 +282,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Home\Scene\SceneList\SceneListItem.resx">
       <DependentUpon>SceneListItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Logs\Logs.resx">
+      <DependentUpon>Logs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Logs\LogsItem.resx">
+      <DependentUpon>LogsItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -449,6 +467,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\export.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logs.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
