--- a/RayTracingApp/Engine/Engine.csproj
+++ b/RayTracingApp/Engine/Engine.csproj
@@ -44,10 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exporter\Exceptions\ExporterException.cs" />
-    <Compile Include="Exporter\IExporter.cs" />
-    <Compile Include="Exporter\PPMExporter.cs" />
-    <Compile Include="Exporter\PNGExporter.cs" />
-    <Compile Include="Exporter\JPGExporter.cs" />
+    <Compile Include="Exporter\IExporterStrategy.cs" />
+    <Compile Include="Exporter\ConcreteStrategies\PPMExporter.cs" />
+    <Compile Include="Exporter\ConcreteStrategies\PNGExporter.cs" />
+    <Compile Include="Exporter\ConcreteStrategies\JPGExporter.cs" />
     <Compile Include="Renderer.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Printer.cs" />
